--- a/src/components/sidebar/videoSideBar.css
+++ b/src/components/sidebar/videoSideBar.css
@@ -1,11 +1,48 @@
 .videoSideBar {
   position: absolute;
   top: 40%;
-  right: 10px;
+  right: 0;
   color: white;
 }
 
 .videoSideBar__options {
   padding: 20px;
   text-align: center;
+}
+
+@media only screen and (max-height: 654px) {
+  .videoSideBar {
+    top: 37%;
+  }
+}
+
+@media only screen and (min-height: 655px) and (max-height: 668px) {
+  .videoSideBar {
+    top: 40%;
+  }
+}
+
+@media only screen and (min-height: 669px) and (max-height: 740px) {
+  .videoSideBar {
+    top: 45%;
+  }
+}
+
+
+@media only screen and (min-height: 741px) and (max-height: 896px) {
+  .videoSideBar {
+    top: 52%;
+  }
+}
+
+@media only screen and (min-height: 897px) and (max-height: 915px) {
+  .videoSideBar {
+    top: 54%;
+  }
+}
+
+@media only screen and (min-height: 916px) and (max-height: 1368px) {
+  .videoSideBar {
+    top: 47%;
+  }
 }
