--- a/src/components/footer/videoFooter.css
+++ b/src/components/footer/videoFooter.css
@@ -1,16 +1,21 @@
 .videoFooter {
   position: relative;
-  bottom: 130px;
+  bottom: 150px;
   color: white;
   padding-left: 20px;
 }
 
 .videoFooter__text h3 {
   padding-bottom: 10px;
+  margin-right: 60px;
 }
 
 .videoFooter__text p {
   padding-bottom: 20px;
+}
+
+.videoFooter__description {
+  margin-right: 60px;
 }
 
 .videoFooter__music {
