--- a/src/components/footer/videoFooter.css
+++ b/src/components/footer/videoFooter.css
@@ -1,6 +1,6 @@
 .videoFooter {
   position: relative;
-  bottom: 20vh;
+  bottom: 22vh;
   color: white;
   padding-left: 20px;
 }
@@ -61,45 +61,68 @@
   }
 }
 
-@media only screen and (max-height: 740px) {
+@media only screen and (min-height: 653px) {
   .videoFooter {
-    bottom: 30vh;
+    bottom: 23vh;
   }
 }
 
-@media only screen and (min-height: 741px) and (max-height: 851px) {
+@media only screen and (min-height: 654px) and (max-height: 667px) {
   .videoFooter {
-    bottom: 40vh;
+    bottom: 20vh;
   }
 }
 
-@media only screen and (min-height: 845px) and (max-height: 851px) {
+@media only screen and (min-height: 668px) and (max-height: 720px) {
   .videoFooter {
-    bottom: 40vh;
+    bottom: 19vh;
   }
 }
 
-@media only screen and (min-height: 852px) and (max-height: 915px) {
+@media only screen and (min-height: 721px) and (max-height: 740px) {
   .videoFooter {
-    bottom: 33vh;
+    bottom: 21vh;
   }
 }
 
-@media only screen and (min-height: 916px) and (max-height: 1024px) {
+@media only screen and (min-height: 741px) and (max-height: 800px) {
   .videoFooter {
     bottom: 27vh;
   }
 }
 
+@media only screen and (min-height: 801px) and (max-height: 851px) {
+  .videoFooter {
+    bottom: 31vh;
+  }
+}
 
-@media only screen and (min-height: 1025px) and (max-height: 1180px) {
+@media only screen and (min-height: 852px) and (max-height: 896px) {
+  .videoFooter {
+    bottom: 24vh;
+  }
+}
+
+@media only screen and (min-height: 897px) and (max-height: 915px) {
+  .videoFooter {
+    bottom: 24vh;
+  }
+}
+
+@media only screen and (min-height: 916px) and (max-height: 1024px) {
   .videoFooter {
     bottom: 22vh;
   }
 }
 
+@media only screen and (min-height: 1025px) and (max-height: 1180px) {
+  .videoFooter {
+    bottom: 19vh;
+  }
+}
+
 @media only screen and (min-height: 1181px) and (max-height: 1368px) {
   .videoFooter {
-    bottom: 20vh;
+    bottom: 16vh;
   }
 }
